<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:sdk="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_translucence"
            android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/common_bar_height"-->
        <!--android:background="@color/str_normal_light_black"-->
        <!--android:baselineAligned="false"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/user_center"-->
        <!--android:textColor="@color/item_text_normal"-->
        <!--android:textSize="@dimen/text_size_t5"-->
        <!--android:textStyle="bold"/>-->

        <com.yiyou.gamesdk.core.ui.widget.AccountLayout
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            sdk:left_text="@string/user_account"/>

        <com.yiyou.gamesdk.core.ui.widget.AccountLayout
            android:id="@+id/ll_bind_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            sdk:divider="true"
            sdk:left_text="绑定手机"/>

        <com.yiyou.gamesdk.core.ui.widget.AccountLayout
            android:id="@+id/ll_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            sdk:left_text="@string/my_wallet"/>

        <com.yiyou.gamesdk.core.ui.widget.AccountLayout
            android:id="@+id/ll_coupon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            sdk:left_text="@string/coupon"/>

        <com.yiyou.gamesdk.core.ui.widget.AccountLayout
            android:id="@+id/ll_children_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            sdk:divider="true"
            sdk:left_text="@string/my_child_account"
            sdk:right_text="@string/str_children_account_manager"/>

        <com.yiyou.gamesdk.core.ui.widget.AccountLayout
            android:id="@+id/ll_resetpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            sdk:left_text="@string/account_reset_passwd"/>

        <com.yiyou.gamesdk.core.ui.widget.AccountLayout
            android:id="@+id/ll_payment_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            sdk:divider="true"
            sdk:left_text="@string/account_payment_password"/>

        <com.yiyou.gamesdk.core.ui.widget.AccountLayout
            android:id="@+id/ll_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            sdk:left_text="@string/account_feedback"/>



          <TextView
              android:layout_marginTop="12dp"
              android:id="@+id/tv_version"
              android:textColor="@color/d_gray_2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:textSize="@dimen/text_size_t2"
              tools:text="Ver1.0.0-R12"/>

    </LinearLayout>


</ScrollView>