<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_translucence"
              android:orientation="vertical">

    <EditText
        android:id="@+id/edt_old_pwd"
        style="@style/FullWidthEditText"
        android:layout_marginTop="@dimen/space_4"
        android:background="@color/edt_input"
        android:digits="@string/register_password_digits"
        android:hint="@string/reset_password_old_password_tip"
        android:inputType="textPassword"
        android:textColor="@color/item_text_normal"
        android:textColorHint="@color/btn_dark"
        android:textSize="@dimen/text_size_t3"/>

    <EditText
        android:id="@+id/edt_new_pwd"
        style="@style/FullWidthEditText"
        android:layout_marginTop="@dimen/space_4"
        android:background="@color/edt_input"
        android:digits="@string/register_password_digits"
        android:hint="@string/reset_password_new_password_tip"
        android:inputType="textPassword"
        android:textColor="@color/item_text_normal"
        android:textColorHint="@color/btn_dark"
        android:textSize="@dimen/text_size_t3"/>

    <EditText
        android:id="@+id/edt_new_pwd_re"
        style="@style/FullWidthEditText"
        android:layout_marginTop="@dimen/space_4"
        android:background="@color/edt_input"
        android:digits="@string/register_password_digits"
        android:hint="@string/reset_password_new_password_re_tip"
        android:inputType="textPassword"
        android:textColor="@color/item_text_normal"
        android:textColorHint="@color/btn_dark"
        android:textSize="@dimen/text_size_t3"/>

    <Button
        android:id="@+id/btn_confirm"
        style="@style/DialogConfirmButton"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margin_32px"
        android:layout_marginRight="@dimen/margin_32px"
        android:layout_marginTop="@dimen/margin_48px"
        android:background="@drawable/sdk_selector_dialog_btn_orange"
        android:text="@string/btn_reset_password"
        android:textColor="@color/edt_input"
        android:textSize="@dimen/text_size_t5"/>

    <TextView
        android:id="@+id/btn_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:text="@string/btn_forget_password"
        android:textColor="@color/item_text_dark"
        android:textSize="@dimen/text_size_t3"/>
</LinearLayout>