<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.qiyuan.gamesdk.core.ui.widget.DrawableEditText
        android:id="@+id/edit_register_container_account_password"
        style="@style/DialogEditText"
        android:layout_marginBottom="@dimen/margin_6px"
        android:layout_marginTop="@dimen/margin_32px"
        android:digits="@string/register_password_digits"
        android:drawableLeft="@drawable/login_icon_password2"
        android:drawableStart="@drawable/login_icon_password2"
        android:hint="@string/str_set_register_password_hint"
        android:inputType="textPassword"
        android:maxLines="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_6px"
        android:gravity="center"
        android:text="@string/str_set_register_password_tip"
        android:textColor="@color/qy_sdk_dialog_gray"
        android:textSize="@dimen/text_size_t3" />
</LinearLayout>
